--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "django-imagekit==6.0.0",
     "django-jazzmin==3.0.2",
     "django-ninja==1.5.3",
+    "django-ninja-jwt==5.4.4",
     "pillow==12.1.1",
     "psycopg2-binary==2.9.9",
 ]
