--- a/src/.env example
+++ b/src/.env example
@@ -5,3 +5,6 @@ POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=dfghjkgdfjhkkhjfgd
 DATABASE_URL=postgresql://postgres:dfghjkgdfjhkkhjfgd@127.0.0.1:5432/postgres
+WEATHER_API_KEY=88005553535 # api.weatherapi.com key
+EMAIL_BACKEND=post_office.EmailBackend
+CELERY_BROKER_URL=redis://redis:6379/0
