--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -1,3 +1,14 @@
+[dependency-groups]
+dev = [
+    "pytest>=8.0",
+    "pytest-django>=4.9",
+    "pytest-cov>=6.0",
+]
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "tests.settings_test"
+pythonpath = ["."]
+
 [project]
 name = "testovoe"
 version = "0.1.0"
